@@ -221,13 +221,12 @@ class Packer:
         # store protected part
         self.replacelist.append(match.group(1))
         # return escaped index
-        return "\x00%i" % len(self.replacelist)
+        return "\x00%i\x00" % len(self.replacelist)
 
     def pack(self, input):
         # list of protected parts
         self.replacelist = []
-        # escape the escapechar
-        output = input.replace('\x00','\x00\x00')
+        output = input
         for regexp, replacement, keyword_encoder in self.patterns:
             if replacement is None:
                 if keyword_encoder is None:
@@ -250,10 +249,8 @@ class Packer:
             # we use lambda in here, so the real string is used and no escaping
             # is done on it
             before = len(output)
-            regexp = re.compile('(?<!\x00)\x00%i' % (index+1))
+            regexp = re.compile('\x00%i\x00' % (index+1))
             output = regexp.sub(lambda m:replacement, output)
-        # unescape
-        output = output.replace('\x00\x00','\x00')
         # done
         return output
 
@@ -290,22 +287,32 @@ class JavascriptPacker(Packer):
             
             self.keywordSub(r"""\b_[A-Za-z\d]\w*""", lambda i: "_%i" % i)
     
-            # protect strings
-            # this is more correct, but needs more testing
-            # it has to be more accurate because of the more aggresive packing later
-            self.protect(r"""(?<=return|..case|.....[=\[|(,?:+])\s*((?P<quote>['"])(?:\\(?P=quote)|\\\n|.)*?(?P=quote))""", re.DOTALL)
-        else:
-            # protect strings
-            # these sometimes catch to much, but in safe mode this doesn't hurt
-            self.protect(r"""('(?:\\'|\\\n|.)*?')""")
-            self.protect(r'''("(?:\\"|\\\n|.)*?")''')
+        # protect strings
+        # these sometimes catch to much, but in safe mode this doesn't hurt
+        
+        # the parts:
+        # match a single quote
+        # match anything but the single quote, a backslash and a newline "[^'\\\n]"
+        # or match a null escape (\0 not followed by another digit) "\\0(?![0-9])"
+        # or match a character escape (no newline) "\\[^\n]"
+        # do this until there is another single quote "(?:<snip>)*?'"
+        # all this return one group "(<snip>)"
+        self.protect(r"""('(?:[^'\\\n]|\\0(?![0-9])|\\x[0-9a-fA-F]{2}|\\u[0-9a-fA-F]{4}|\\[^\n])*?')""")
+        # the same for double quotes
+        self.protect(r"""("(?:[^"\\\n]|\\0(?![0-9])|\\x[0-9a-fA-F]{2}|\\u[0-9a-fA-F]{4}|\\[^\n])*?")""")
+
         # protect regular expressions
         self.protect(r"""\s+(\/[^\/\n\r\*][^\/\n\r]*\/g?i?)""")
         self.protect(r"""([^\w\$\/'"*)\?:]\/[^\/\n\r\*][^\/\n\r]*\/g?i?)""")
-        # one line comments
+
+        # protect IE conditional compilation
+        self.protect(r'(/\*@.*?(?:\*/|\n|\*/(?!\n)))', re.DOTALL)
+
+        # remove one line comments
         self.sub(r'\s*//.*$', '', re.MULTILINE)
-        # multiline comments
-        self.sub(r'/\*(?!@).*?\*/', '', re.DOTALL)
+        # remove multiline comments
+        self.sub(r'/\*.*?\*/', '', re.DOTALL)
+
         # strip whitespace at the beginning and end of each line
         self.sub(r'^[ \t\r\f\v]*(.*?)[ \t\r\f\v]*$', r'\1', re.MULTILINE)
         # whitespace after some special chars but not
@@ -399,7 +406,7 @@ js_compression_tests = (
         """, 
         """\
             function dummy(){var localvar=10
-            document.write(localvar);return'bar'}""",
+            document.write(localvar);return 'bar'}""",
         'full'
     ),
     (
@@ -419,6 +426,88 @@ js_compression_tests = (
         'escapedStrings',
         r"""var message = "foo: \"something in quotes\"" + foo + "\nbar: " + bar;""",
         r"""var message="foo: \"something in quotes\""+foo+"\nbar: "+bar;"""
+    ),
+    (
+        'escapedStrings2',
+        r"""kukit.kssp.string = kukit.tk.mkParser('string', {
+                "'": 'this.emitAndReturn(new kukit.kssp.quote(this.src))',
+                "\\": 'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'
+                });
+            kukit.kssp.string.prototype.process = function() {
+                // collect up the value of the string, omitting the quotes
+                this.txt = '';
+                for (var i=1; i<this.result.length-1; i++) {
+                    this.txt += this.result[i].txt;
+                }
+            };
+
+            kukit.kssp.string2 = kukit.tk.mkParser('string', {
+                '"': 'this.emitAndReturn(new kukit.kssp.dquote(this.src))',
+                "\\": 'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'
+                });
+            kukit.kssp.string2.prototype.process = kukit.kssp.string.prototype.process; 
+
+
+            kukit.kssp.backslashed = kukit.tk.mkParser('backslashed', {});
+            kukit.kssp.backslashed.prototype.nextStep = function(table) {
+                // digest the next character and store it as txt
+                var src = this.src;
+                var length = src.text.length;
+                if (length < src.pos + 1) {
+                    this.emitError('Missing character after backslash');
+                } else { 
+                    this.result.push(new kukit.tk.Fraction(src, src.pos+1));
+                    this.src.pos += 1;
+                    this.finished = true;
+                }
+            };
+            kukit.kssp.backslashed.prototype.process = function() {
+                this.txt = this.result[1].txt;
+            };
+                    """,
+                    r"""kukit.kssp.string=kukit.tk.mkParser('string',{"'": 'this.emitAndReturn(new kukit.kssp.quote(this.src))',"\\":'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'});kukit.kssp.string.prototype.process=function(){this.txt='';for(var i=1;i<this.result.length-1;i++){this.txt+=this.result[i].txt}};kukit.kssp.string2=kukit.tk.mkParser('string',{'"':'this.emitAndReturn(new kukit.kssp.dquote(this.src))',"\\":'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'});kukit.kssp.string2.prototype.process=kukit.kssp.string.prototype.process;kukit.kssp.backslashed=kukit.tk.mkParser('backslashed',{});kukit.kssp.backslashed.prototype.nextStep=function(table){var src=this.src;var length=src.text.length;if(length<src.pos+1){this.emitError('Missing character after backslash')} else{this.result.push(new kukit.tk.Fraction(src,src.pos+1));this.src.pos+=1;this.finished=true}};kukit.kssp.backslashed.prototype.process=function(){this.txt=this.result[1].txt};""",
+                    'safe'
+                ),
+                (
+                    'escapedStrings2',
+                    r"""kukit.kssp.string = kukit.tk.mkParser('string', {
+                "'": 'this.emitAndReturn(new kukit.kssp.quote(this.src))',
+                "\\": 'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'
+                });
+            kukit.kssp.string.prototype.process = function() {
+                // collect up the value of the string, omitting the quotes
+                this.txt = '';
+                for (var i=1; i<this.result.length-1; i++) {
+                    this.txt += this.result[i].txt;
+                }
+            };
+
+            kukit.kssp.string2 = kukit.tk.mkParser('string', {
+                '"': 'this.emitAndReturn(new kukit.kssp.dquote(this.src))',
+                "\\": 'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'
+                });
+            kukit.kssp.string2.prototype.process = kukit.kssp.string.prototype.process; 
+
+
+            kukit.kssp.backslashed = kukit.tk.mkParser('backslashed', {});
+            kukit.kssp.backslashed.prototype.nextStep = function(table) {
+                // digest the next character and store it as txt
+                var src = this.src;
+                var length = src.text.length;
+                if (length < src.pos + 1) {
+                    this.emitError('Missing character after backslash');
+                } else { 
+                    this.result.push(new kukit.tk.Fraction(src, src.pos+1));
+                    this.src.pos += 1;
+                    this.finished = true;
+                }
+            };
+            kukit.kssp.backslashed.prototype.process = function() {
+                this.txt = this.result[1].txt;
+            };
+        """,
+        r"""kukit.kssp.string=kukit.tk.mkParser('string',{"'": 'this.emitAndReturn(new kukit.kssp.quote(this.src))',"\\":'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'});kukit.kssp.string.prototype.process=function(){this.txt='';for(var i=1;i<this.result.length-1;i++){this.txt+=this.result[i].txt}};kukit.kssp.string2=kukit.tk.mkParser('string',{'"':'this.emitAndReturn(new kukit.kssp.dquote(this.src))',"\\":'new kukit.kssp.backslashed(this.src, kukit.kssp.backslash)'});kukit.kssp.string2.prototype.process=kukit.kssp.string.prototype.process;kukit.kssp.backslashed=kukit.tk.mkParser('backslashed',{});kukit.kssp.backslashed.prototype.nextStep=function(table){var src=this.src;var length=src.text.length;if(length<src.pos+1){this.emitError('Missing character after backslash')}else{this.result.push(new kukit.tk.Fraction(src,src.pos+1));this.src.pos+=1;this.finished=true}};kukit.kssp.backslashed.prototype.process=function(){this.txt=this.result[1].txt};""",
+        'full'
     ),
     (
         'whitspaceAroundPlus',
@@ -465,6 +554,37 @@ js_compression_tests = (
         """,
         """\
             var x=function(){}next_instr;""",
+        'full'
+    ),
+    (
+        'missingSemicolon2',
+        """\
+            id=id || 'ids:list'  // defaults to ids:list, this is the most common usage
+
+            if (selectbutton.isSelected==null){
+                initialState=initialState || false;
+                selectbutton.isSelected=initialState;
+                }
+        """,
+        """\
+            id=id||'ids:list'
+            if(selectbutton.isSelected==null){initialState=initialState||false;selectbutton.isSelected=initialState}
+        """,
+        'safe'
+    ),
+    (
+        'missingSemicolon2',
+        """\
+            id=id || 'ids:list'  // defaults to ids:list, this is the most common usage
+
+            if (selectbutton.isSelected==null){
+                initialState=initialState || false;
+                selectbutton.isSelected=initialState;
+                }
+        """,
+        """\
+            id=id||'ids:list'
+            if(selectbutton.isSelected==null){initialState=initialState||false;selectbutton.isSelected=initialState}""",
         'full'
     ),
     # excessive semicolons after curly brackets get removed
@@ -537,6 +657,27 @@ js_compression_tests = (
         """\
             function abc(){return value};function xyz(a,b){if(a==null){return 1}}""",
         'full'
+    ),
+    (
+        'conditionalIE',
+        """\
+            /* for Internet Explorer */
+            /*@cc_on @*/
+            /*@if (@_win32)
+            	document.write("<script id=__ie_onload defer src=javascript:void(0)><\/script>");
+            	var script = document.getElementById("__ie_onload");
+            	script.onreadystatechange = function() {
+            		if (this.readyState == "complete") {
+            			DOMContentLoadedInit(); // call the onload handler
+            		}
+            	};
+            /*@end @*/
+        """,
+        """\
+            /*@cc_on @*/
+            /*@if (@_win32)
+             document.write("<script id=__ie_onload defer src=javascript:void(0)><\\/script>");var script=document.getElementById("__ie_onload");script.onreadystatechange=function(){if(this.readyState=="complete"){DOMContentLoadedInit()}};/*@end @*/
+        """
     ),
 )
 
