@@ -1,6 +1,13 @@
 1.3.4 (SVN/unreleased)
 ======================
 
+ * Improved IE conditional compilation protection, it now works in "full"
+   compression.
+   [fschulze]
+
+ * Improved regular expression for strings.
+   [fschulze]
+
  * Fixed order of oneline and multiline comment removal in javascript packer.
    [fschulze]
 
